rob2_ws/log/build_2025-12-09_11-15-20/py_pubsub/stdout_stderr.log
running egg_info
writing ../../build/py_pubsub/py_pubsub.egg-info/PKG-INFO
writing dependency_links to ../../build/py_pubsub/py_pubsub.egg-info/dependency_links.txt
writing entry points to ../../build/py_pubsub/py_pubsub.egg-info/entry_points.txt
writing requirements to ../../build/py_pubsub/py_pubsub.egg-info/requires.txt
writing top-level names to ../../build/py_pubsub/py_pubsub.egg-info/top_level.txt
reading manifest file '../../build/py_pubsub/py_pubsub.egg-info/SOURCES.txt'
adding license file 'LICENSE'
writing manifest file '../../build/py_pubsub/py_pubsub.egg-info/SOURCES.txt'
running build
running build_py
running install
running install_lib
byte-compiling /home/emsi/rob2_ws/install/py_pubsub/lib/python3.10/site-packages/py_pubsub/publisher_member_function.py to publisher_member_function.cpython-310.pyc
running install_data
  File "/home/emsi/rob2_ws/install/py_pubsub/lib/python3.10/site-packages/py_pubsub/publisher_member_function.py", line 8
    super().__init__('minimal_publisher'):
                                         ^
SyntaxError: invalid syntax

copying package.xml -> /home/emsi/rob2_ws/install/py_pubsub/share/py_pubsub
running install_egg_info
removing '/home/emsi/rob2_ws/install/py_pubsub/lib/python3.10/site-packages/py_pubsub-0.0.0-py3.10.egg-info' (and everything under it)
Copying ../../build/py_pubsub/py_pubsub.egg-info to /home/emsi/rob2_ws/install/py_pubsub/lib/python3.10/site-packages/py_pubsub-0.0.0-py3.10.egg-info
running install_scripts
Installing talker script to /home/emsi/rob2_ws/install/py_pubsub/lib/py_pubsub
writing list of installed files to '/home/emsi/rob2_ws/build/py_pubsub/install.log'
